.k8s/deploy.template.yaml
#----------------------------
# Kubernetes manifests
#----------------------------
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: react-app

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}-deployment
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
      annotations:
        app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
        app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
    spec:
      containers:
        - name: ${APPLICATION_NAME}
          image: ${IMAGE}
          ports:
            - containerPort: ${CONTAINER_PORT}
              protocol: TCP
          imagePullPolicy: Always
      imagePullSecrets:
        - name: image-pull-secret
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}-service
  labels:
    app: ${APPLICATION_NAME}
spec:
  type: NodePort
  selector:
    app: ${APPLICATION_NAME}
  ports:
    - protocol: TCP
      port: ${EXPOSED_PORT}
      targetPort: ${CONTAINER_PORT}
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: "gitlab-ingress-nginx"
spec:
  rules:
    - host: ${HOST}
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: ${APPLICATION_NAME}-service
                port:
                  number: ${EXPOSED_PORT}
